force-app/main/default/objects/Program__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>X_Purpose</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>