force-app/main/default/objects/Program__c/fields/QAStartDate__c.field-meta.xml
<CustomField>
    <fullName>QAStartDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Q &amp; A Start Date</label>
    <type>Date</type>
</CustomField>