force-app/main/default/objects/Program__c/fields/QuestionCloseDate__c.field-meta.xml
<CustomField>
    <fullName>QuestionCloseDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Question Close Date</label>
    <type>Date</type>
</CustomField>