force-app/main/default/objects/Program__c/fields/RangeandAverageofFinancialAssistanc__c.field-meta.xml
<CustomField>
    <fullName>RangeandAverageofFinancialAssistanc__c</fullName>
    <label>Range &amp; Average Of Financial Assistance</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>