force-app/main/default/objects/Program__c/fields/RangeofApprovalDisApprovalTime__c.field-meta.xml
<CustomField>
    <fullName>RangeofApprovalDisApprovalTime__c</fullName>
    <label>Range of Approval/DisApproval Time</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>