force-app/main/default/objects/Program__c/fields/RecallComment__c.field-meta.xml
<CustomField>
    <fullName>RecallComment__c</fullName>
    <label>X_Recall Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>