force-app/main/default/objects/Program__c/fields/Records__c.field-meta.xml
<CustomField>
    <fullName>Records__c</fullName>
    <label>Records</label>
    <type>TextArea</type>
</CustomField>