force-app/main/default/objects/Program__c/fields/RegionalOrLocalOffice__c.field-meta.xml
<CustomField>
    <fullName>RegionalOrLocalOffice__c</fullName>
    <label>Regional Or Local Office</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>