force-app/main/default/objects/Program__c/fields/RegulationsGuidelinesAndLiterature__c.field-meta.xml
<CustomField>
    <fullName>RegulationsGuidelinesAndLiterature__c</fullName>
    <label>Regulations, Guidelines And Literature</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>