force-app/main/default/objects/Program__c/fields/RelatedProgams__c.field-meta.xml
<CustomField>
    <fullName>RelatedProgams__c</fullName>
    <description>comma separated related cfda program numbers</description>
    <label>X_Related Progams</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>