force-app/main/default/objects/Program__c/fields/Renewals__c.field-meta.xml
<CustomField>
    <fullName>Renewals__c</fullName>
    <label>Renewals</label>
    <length>15000</length>
    <type>LongTextArea</type>
</CustomField>