force-app/main/default/objects/Program__c/fields/ReviewerIds__c.field-meta.xml
<CustomField>
    <fullName>ReviewerIds__c</fullName>
    <label>X_Reviewer Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>