force-app/main/default/objects/Program__c/fields/ReviewInitiated__c.field-meta.xml
<CustomField>
    <fullName>ReviewInitiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B_Review Initiated</label>
    <type>Checkbox</type>
</CustomField>