force-app/main/default/objects/Program__c/fields/RoleCode__c.field-meta.xml
<CustomField>
    <fullName>RoleCode__c</fullName>
    <formula>IF( RecordType.DeveloperName ==&apos;NGOProgram&apos;,&apos;AllInternalUsers&apos;, Account__r.GNT__RoleCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_Role Code</label>
    <type>Text</type>
</CustomField>