force-app/main/default/objects/Program__c/fields/SelectionAnnouncementDate__c.field-meta.xml
<CustomField>
    <fullName>SelectionAnnouncementDate__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Selection Announcement Date</label>
    <type>Date</type>
</CustomField>