force-app/main/default/objects/Program__c/fields/ShowActiveProgram__c.field-meta.xml
<CustomField>
    <fullName>ShowActiveProgram__c</fullName>
    <formula>OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Submitted for Approval&apos;),ISPICKVAL( RiskAssessmentRequired__c ,&apos;No&apos;),ISPICKVAL(Status__c,&apos;Approved&apos;),ISPICKVAL(Status__c,&apos;Rejected&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>B_Show Active Program</label>
    <type>Checkbox</type>
</CustomField>