force-app/main/default/objects/Program__c/fields/SolicitationNumber__c.field-meta.xml
<CustomField>
    <fullName>SolicitationNumber__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Solicitation Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>