force-app/main/default/objects/Program__c/fields/SolicitationType__c.field-meta.xml
<CustomField>
    <fullName>SolicitationType__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Solicitation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular Cycle</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Out-of-Cycle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>