force-app/main/default/objects/Program__c/fields/SolicitationYear__c.field-meta.xml
<CustomField>
    <fullName>SolicitationYear__c</fullName>
    <description>Created and used for GOVSBIR</description>
    <label>Solicitation Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>