force-app/main/default/objects/Program__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Start date of the program</description>
    <label>X_Start Date</label>
    <type>Date</type>
</CustomField>