force-app/main/default/objects/Program__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The current state of the program</description>
    <label>X_State</label>
    <type>Checkbox</type>
</CustomField>