force-app/main/default/objects/Program__c/fields/StateProgramCode__c.field-meta.xml
<CustomField>
    <fullName>StateProgramCode__c</fullName>
    <label>X_State Program Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>