force-app/main/default/objects/Program__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Block Grants</fullName>
            </value>
            <value>
                <fullName>Earmark Grants</fullName>
            </value>
            <value>
                <fullName>Emergency Grants</fullName>
            </value>
            <value>
                <fullName>Formula Grants</fullName>
            </value>
            <value>
                <fullName>Project Grants</fullName>
            </value>
            <value>
                <fullName>Research Grants</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>