force-app/main/default/objects/Program__c/fields/TypeFormula__c.field-meta.xml
<CustomField>
    <fullName>TypeFormula__c</fullName>
    <formula>CASE( RecordType.DeveloperName , &apos;InternalProgram&apos;, &apos;Internal&apos;, &apos;ExternalProgram&apos;, &apos;Federal&apos;,&apos;NGOProgram&apos;,&apos;NGO&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>