force-app/main/default/objects/Program__c/fields/TypesOfAssistance__c.field-meta.xml
<CustomField>
    <fullName>TypesOfAssistance__c</fullName>
    <label>Types Of Assistance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Project Grants</fullName>
            </value>
            <value>
                <fullName>Direct Payments with Unrestricted Use</fullName>
            </value>
            <value>
                <fullName>DIRECT LOANS</fullName>
            </value>
            <value>
                <fullName>DIRECT PAYMENTS FOR A SPECIFIED USE</fullName>
            </value>
            <value>
                <fullName>Cooperative Agreements</fullName>
            </value>
            <value>
                <fullName>Formula Grants</fullName>
            </value>
            <value>
                <fullName>Guaranteed/Insured Loans</fullName>
            </value>
            <value>
                <fullName>DISSEMINATION OF TECHNICAL INFORMATION</fullName>
            </value>
            <value>
                <fullName>ADVISORY SERVICES AND COUNSELING</fullName>
            </value>
            <value>
                <fullName>PROVISION OF SPECIALIZED SERVICES</fullName>
            </value>
            <value>
                <fullName>TRAINING</fullName>
            </value>
            <value>
                <fullName>INVESTIGATION OF COMPLAINTS</fullName>
            </value>
            <value>
                <fullName>Research Grants</fullName>
            </value>
            <value>
                <fullName>Block Grants</fullName>
            </value>
            <value>
                <fullName>Earmark Grants</fullName>
            </value>
            <value>
                <fullName>Emergency Grants</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>