force-app/main/default/objects/Program__c/fields/UndoApproval__c.field-meta.xml
<CustomField>
    <fullName>UndoApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>X_Undo Approval?</label>
    <type>Checkbox</type>
</CustomField>