force-app/main/default/objects/Program__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <label>X_URL</label>
    <type>Url</type>
</CustomField>