force-app/main/default/objects/Program__c/fields/UsesAndUseRestrictions__c.field-meta.xml
<CustomField>
    <fullName>UsesAndUseRestrictions__c</fullName>
    <label>Uses And Use Restrictions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>