force-app/main/default/objects/Program__c/fields/WebsiteAddress__c.field-meta.xml
<CustomField>
    <fullName>WebsiteAddress__c</fullName>
    <description>used for GOVSBIR</description>
    <label>Solicitation URL</label>
    <type>Url</type>
</CustomField>