force-app/main/default/objects/Program__c/recordTypes/ExternalProgram.recordType-meta.xml
<RecordType>
    <fullName>ExternalProgram</fullName>
    <active>true</active>
    <description>Federal Program Type captures all federal Programs Information</description>
    <label>External Program</label>
</RecordType>