force-app/main/default/objects/Program__c/recordTypes/InternalProgram.recordType-meta.xml
<RecordType>
    <fullName>InternalProgram</fullName>
    <active>true</active>
    <description>This Record type stores all State Program Information</description>
    <label>Internal Program</label>
</RecordType>