force-app/main/default/objects/Program__c/recordTypes/NGOProgram.recordType-meta.xml
<RecordType>
    <fullName>NGOProgram</fullName>
    <active>true</active>
    <description>Programs which are sponsored by the non Federal Agencies</description>
    <label>NGO Program</label>
</RecordType>